--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
     "url": "https://github.com/Jacob-Westley/MHWA/issues"
   },
   "homepage": "https://github.com/Jacob-Westley/MHWA#readme",
+  "devDependencies": {},
   "description": ""
 }
